fix: webkit-scrollbar styles

--- a/src/index.css
+++ b/src/index.css
@@ -1,35 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,700;1,700&family=Source+Sans+Pro:wght@400;600;700&display=swap");
+/* FONT FACE CONFIGS */
+/* Montserrat Font */
 @import "./fonts/font-face/Montserrat.css";
-
-html,
-#root,
-.app,
-.content {
-  height: 100%;
-  width: 100%;
-}
-
-.app {
-  display: flex;
-  position: relative;
-  font-family: "Source Sans Pro", sans-serif;
-}
-
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: #e0e0e0;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #888;
-}
-
-/* Handle on Hover */
-::-webkit-scrollbar-track:hover {
-  background: #555;
-}
